1_namespace.yaml
# Create namespaces in kubernetes
kind: Namespace
apiVersion: v1
metadata:
  name: argocd
  labels:
    name: argocd-environment
