2_kcert.yml
apiVersion: v1
kind: Namespace
metadata:
  name: kcert
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kcert
  namespace: kcert
  labels:
    app: kcert
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kcert
  template:
    metadata:
      labels:
        app: kcert
    spec:
      serviceAccountName: kcert
      containers:
      - name: kcert
        image: nabsul/kcert:v1.0.1
        ports:
        - containerPort: 80
          name: http
        - containerPort: 8080
          name: http-admin
---
apiVersion: v1
kind: Service
metadata:
  name: kcert
  namespace: kcert
  labels:
    app: kcert
spec:
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
    - name: http-admin
      protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    app: kcert
